--- a/config/install/core.entity_form_display.block_content.web_directory.default.yml
+++ b/config/install/core.entity_form_display.block_content.web_directory.default.yml
@@ -5,19 +5,43 @@ dependencies:
     - block_content.type.web_directory
     - field.field.block_content.web_directory.field_asurite_ids
     - field.field.block_content.web_directory.field_component_type
+    - field.field.block_content.web_directory.field_default_sort
     - field.field.block_content.web_directory.field_department_ids
     - field.field.block_content.web_directory.field_filter_campus
     - field.field.block_content.web_directory.field_filter_employee
     - field.field.block_content.web_directory.field_filter_expertise
     - field.field.block_content.web_directory.field_filter_title
+    - field.field.block_content.web_directory.field_ids
+    - field.field.block_content.web_directory.field_news_items_to_display
     - field.field.block_content.web_directory.field_people_add
     - field.field.block_content.web_directory.field_people_add_department
     - field.field.block_content.web_directory.field_people_list
     - field.field.block_content.web_directory.field_people_search
+    - field.field.block_content.web_directory.field_show_title
   module:
+    - field_group
     - field_states_ui
     - maxlength
     - webspark_webdir
+third_party_settings:
+  field_group:
+    group_display_settings:
+      children:
+        - field_default_sort
+        - field_show_title
+        - field_news_items_to_display
+        - field_ids
+      parent_name: ''
+      weight: 12
+      format_type: fieldset
+      region: content
+      format_settings:
+        show_empty_fields: false
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Display settings'
 id: block_content.web_directory.default
 targetEntityType: block_content
 bundle: web_directory
@@ -81,6 +105,12 @@ content:
               comparison: filled
               value: ''
               submit: 'Add Cancel'
+    type: options_select
+    region: content
+  field_default_sort:
+    weight: 16
+    settings: {  }
+    third_party_settings: {  }
     type: options_select
     region: content
   field_department_ids:
@@ -231,6 +261,21 @@ content:
         maxlength_js_truncate_html: false
     type: string_textarea
     region: content
+  field_ids:
+    weight: 19
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_news_items_to_display:
+    weight: 18
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+    region: content
   field_people_add:
     weight: 9
     settings: {  }
@@ -328,6 +373,13 @@ content:
         maxlength_js: null
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
     type: string_textfield
+    region: content
+  field_show_title:
+    weight: 17
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   info:
     type: string_textfield
