--- a/config/install/core.entity_view_display.block_content.web_directory.default.yml
+++ b/config/install/core.entity_view_display.block_content.web_directory.default.yml
@@ -5,97 +5,37 @@ dependencies:
     - block_content.type.web_directory
     - field.field.block_content.web_directory.field_asurite_ids
     - field.field.block_content.web_directory.field_component_type
+    - field.field.block_content.web_directory.field_default_sort
     - field.field.block_content.web_directory.field_department_ids
     - field.field.block_content.web_directory.field_filter_campus
     - field.field.block_content.web_directory.field_filter_employee
     - field.field.block_content.web_directory.field_filter_expertise
     - field.field.block_content.web_directory.field_filter_title
+    - field.field.block_content.web_directory.field_ids
+    - field.field.block_content.web_directory.field_news_items_to_display
     - field.field.block_content.web_directory.field_people_add
     - field.field.block_content.web_directory.field_people_add_department
     - field.field.block_content.web_directory.field_people_list
     - field.field.block_content.web_directory.field_people_search
-  module:
-    - options
+    - field.field.block_content.web_directory.field_show_title
 id: block_content.web_directory.default
 targetEntityType: block_content
 bundle: web_directory
 mode: default
-content:
-  field_asurite_ids:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
-  field_component_type:
-    weight: 0
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: list_default
-    region: content
-  field_department_ids:
-    weight: 1
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
-  field_filter_campus:
-    weight: 6
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_filter_employee:
-    weight: 9
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_filter_expertise:
-    weight: 8
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_filter_title:
-    weight: 10
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
-  field_people_add_department:
-    weight: 4
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_people_list:
-    weight: 3
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_people_search:
-    weight: 5
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
+content: {  }
 hidden:
+  field_asurite_ids: true
+  field_component_type: true
+  field_default_sort: true
+  field_department_ids: true
+  field_filter_campus: true
+  field_filter_employee: true
+  field_filter_expertise: true
+  field_filter_title: true
+  field_ids: true
+  field_news_items_to_display: true
   field_people_add: true
+  field_people_add_department: true
+  field_people_list: true
+  field_people_search: true
+  field_show_title: true
