WS2-1247 update component to 1.19.1 and add composer.json

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ node_modules/@asu-design-system/app-webdir-ui/dist/*
 !node_modules/@asu-design-system/app-webdir-ui/dist/webdirUI.umd.js
 
 /yarn-error.log
+
+/vendor/
