--- a/webspark_webdir.info.yml
+++ b/webspark_webdir.info.yml
@@ -1,9 +1,13 @@
 name: Web Directory Component
 description: Contains the Web Dirctory Component
-package: Wbspark2
+package: ASU
 
 type: module
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
   - field_states_ui
+  - maxlength
+  - field_group
+  - options
+  - block_content
