--- a/webspark_webdir.services.yml
+++ b/webspark_webdir.services.yml
@@ -8,3 +8,5 @@ services:
       - '@http_client_factory'
       - '@logger.channel.webspark_webdir'
       - '@messenger'
+  webspark_webdir.webdir_api_url:
+    class: Drupal\webspark_webdir\WebdirApiUrl
