--- a/config/install/field.field.block_content.web_directory.field_filter_campus.yml
+++ b/config/install/field.field.block_content.web_directory.field_filter_campus.yml
@@ -9,7 +9,7 @@ field_name: field_filter_campus
 entity_type: block_content
 bundle: web_directory
 label: 'Filter by campus'
-description: ''
+description: '<i><small>Only display profiles with a primary job campus matching one of these campuses.</small></i>'
 required: false
 translatable: false
 default_value: {  }
