--- a/config/install/field.field.block_content.web_directory.field_filter_title.yml
+++ b/config/install/field.field.block_content.web_directory.field_filter_title.yml
@@ -9,7 +9,7 @@ field_name: field_filter_title
 entity_type: block_content
 bundle: web_directory
 label: 'Filter by title'
-description: '<i><small>*Add one title per row.</small></i>'
+description: '<i><small>Add one title per row. Title match is case-sensitive. Profiles displayed must match one of these titles.</small></i>'
 required: false
 translatable: false
 default_value: {  }
