fixes type - issue #24

--- a/webspark_webdir.info.yml
+++ b/webspark_webdir.info.yml
@@ -1,5 +1,5 @@
 name: Web Directory Component
-description: Contains the Web Dirctory Component
+description: Contains the Web Directory Component
 package: ASU
 
 type: module
