--- a/webspark_webdir.services.yml
+++ b/webspark_webdir.services.yml
@@ -10,3 +10,5 @@ services:
       - '@messenger'
   webspark_webdir.webdir_api_url:
     class: Drupal\webspark_webdir\WebdirApiUrl
+  webspark_webdir.helper_functions:
+    class: Drupal\webspark_webdir\WebsparkWebdirHelpers
