--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@ node_modules/@asu-design-system/app-webdir-ui/*
 node_modules/@asu-design-system/app-webdir-ui/dist/*
 !node_modules/@asu-design-system/app-webdir-ui/dist/webdirUI.umd.js
 !node_modules/@asu-design-system/app-webdir-ui/dist/img
-node_modules/@asu-design-system/app-webdir-ui/dist/img/*
-!node_modules/@asu-design-system/app-webdir-ui/dist/img/anon.png
+!node_modules/@asu-design-system/app-webdir-ui/dist/img/*
 
 /yarn-error.log
 
