--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
-    "@asu-design-system/app-webdir-ui": "1.25.4"
+    "@asu/app-webdir-ui": "1.2.0"
   }
 }
