--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.history/
+.cache
+
+# NodeJS projects
+## Top-level
 !node_modules
 node_modules/*
 
@@ -25,6 +30,15 @@ node_modules/@asu/app-webdir-ui/dist/*
 
 /yarn-error.log
 
+# Drupal/external libraries
 /vendor/
 
+# PHPStorm (IDE) configurations
 .idea/
+
+# Config management script output
+config/_changes.diff
+config/**/_diff_commands.bash
+*APPLICABLE.patch
+.DS_Store
+*.DS_Store
